tdf#166040 unordf: fix assert when importing empty stream

rdf_parser.c:592: (librdf_parser_parse_counted_string_as_stream) assertion failed: string length is not greater than zero

Check for this in librdf_Repository::importGraph()

Change-Id: I27e180fd2fc09c5f43b7fdfcc7faa184bdc0808a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183721
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit 4995811d0d9cf74fecf9b733b0a0f04fb15e372e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183731
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>